tests on gw algorithm

--- a/max-cut/bruteforce-maxcut.ipynb
+++ b/max-cut/bruteforce-maxcut.ipynb
@@ -123,9 +123,9 @@
    "metadata": {},
    "source": [
     "## Experiment\n",
-    "- Graph sizes: 8, 10, 12, 14, 16 nodes\n",
+    "- Graph sizes: 8, 10, 12, 14, 16, 18 nodes\n",
     "- Edge probability: 0.5 (can be changed for different densities)\n",
-    "- Time per size: 60 seconds"
+    "- Time per size: 600 seconds"
    ]
   },
   {
@@ -187,9 +187,8 @@
     "print(f\"Results saved to {csv_path}\")\n",
     "\n",
     "# Save plot\n",
-    "os.makedirs(\"plots/bf-plots\", exist_ok=True)\n",
     "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "plot_path = f\"bf_violin_{timestamp}.png\"\n",
+    "plot_path = f\"plots/bf-plots/bf_violin_{timestamp}.png\"\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "sns.violinplot(x='Graph Size', y='Time', data=df, inner='quartile', density_norm='width')\n",
