--- a/max-cut/gurobi-maxcut.ipynb
+++ b/max-cut/gurobi-maxcut.ipynb
@@ -5,7 +5,7 @@
    "id": "0f5fe07e",
    "metadata": {},
    "source": [
-    "# Gurobi"
+    "# Gurobi solver for Maximum Cut problem"
    ]
   },
   {
@@ -28,6 +28,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8678665c",
+   "metadata": {},
+   "source": [
+    "## Graph generating function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "f846d9c1",
@@ -39,6 +47,14 @@
     "    for (u, v) in G.edges():\n",
     "        G.edges[u, v]['weight'] = np.random.randint(1, 10)\n",
     "    return G"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16ec531b",
+   "metadata": {},
+   "source": [
+    "## Algorithm"
    ]
   },
   {
@@ -67,6 +83,14 @@
     "    cut = [int(x[i].X) for i in range(n)]\n",
     "    cut_value = m.objVal\n",
     "    return cut, cut_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b1b2cdf",
+   "metadata": {},
+   "source": [
+    "## Experiment function"
    ]
   },
   {
@@ -99,8 +123,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3988e21f",
+   "metadata": {},
+   "source": [
+    "## Experiment\n",
+    "- Graph sizes: 8, 10, 12, 14, 16, 18 nodes\n",
+    "- Edge probability: 0.5 (can be changed for different densities)\n",
+    "- Time per size: 600 seconds"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a95918c6",
    "metadata": {},
    "outputs": [
@@ -157,9 +192,8 @@
     "print(f\"Results saved to {csv_path}\")\n",
     "\n",
     "# Save plot\n",
-    "os.makedirs(\"plots/gur-plots\", exist_ok=True)\n",
     "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "plot_path = f\"gur_violin_{timestamp}.png\"\n",
+    "plot_path = f\"plots/gur-plots/gur_violin_{timestamp}.png\"\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "sns.violinplot(x='Graph Size', y='Time', data=df, inner='quartile', density_norm='width')\n",
